==> wbasser/SoftwareLibraries/HAL/NXP/KinetisK25/GPIO/Core/Trunk/Gpio.c <==
#include "GPIO/Gpio.h"

void Gpio_Initialize( void )
{
  PGPIOPINDEF ptDef;
  U8          nIdx;
  PORT_Type*  ptPort;
  GPIO_Type*  ptGpio;

  // clear the IRQ maps
//  for ( nIdx = 0; nIdx < EIC_EXTINT_NUM; nIdx++ )
//  {
//    atIrqMaps[ nIdx ].eIrqEnum = 0xFF;
//  }
  
  // for each pin def in the list
  for( nIdx = 0; nIdx < GPIO_PIN_ENUM_MAX; nIdx++ )
  {
    // get a pointer to the definition structure
    ptDef = ( PGPIOPINDEF )&atGpioPinDefs[ nIdx ];
    ptPort = GetPortBase( ptDef->ePort );
    ptGpio = GetGpioBase( ptDef->ePort );
    
    // set up the port configuration register
    ptPort->PCR[ ptDef->nPin ] = PORT_PCR_MUX( ptDef->eFunc ) |
                                 BITS( ptDef->bHiDriveEnb, PORT_PCR_DSE_SHIFT ) |
                                 BITS( ptDef->bFilterEnb, PORT_PCR_PFE_SHIFT ) |
                                 BITS( ptDef->bPullEnable, PORT_PCR_PE_SHIFT ) |
                                 ptDef->bPullDir;
                                                    
    // now configure the GPIO direction reigster
    ptGpio->PDDR |= ( ptDef-> eDir ) ? GPIO_PDDR_PDD( ptDef->nPin ) : 0; 
    
    // now set the initial value
    if ( ptDef->bInitialState ^ ptDef->bInvert )
    {
      // turn on the pin
      ptGpio->PSOR = GPIO_PSOR_PTSO( ptDef->nPin );
    }
    else
    {
      // turn off the pin
      ptGpio->PCOR = GPIO_PCOR_PTCO( ptDef->nPin );
    }
  }
}

GPIOERR Gpio_Set( GPIOPINENUM eGpioSel, BOOL bState )
{
  GPIOERR     eError = GPIO_ERR_NONE;
  PGPIOPINDEF ptDef;
  GPIO_Type*  ptGpio;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the definition
    ptDef = ( PGPIOPINDEF )&atGpioPinDefs[ eGpioSel ];

    // get the pointer to the GPIO Base
    ptGpio = GetGpioBase( ptDef->ePort );

    // check for an output pin
    if ( ptDef->eDir == GPIO_DIR_OUT )
    {
      // now set the initial value
      if ( ptDef->bInitialState ^ ptDef->bInvert )
      {
        // turn on the pin
        ptGpio->PSOR = GPIO_PSOR_PTSO( ptDef->nPin );
      }
      else
      {
        // turn off the pin
        ptGpio->PCOR = GPIO_PCOR_PTCO( ptDef->nPin );
      }
    }
    else
    {
      // set the error
      eError = GPIO_ERR_ILLDIR;
    }    
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }
  
  // return the error
  return( eError );
}

GPIOERR Gpio_Get( GPIOPINENUM eGpioSel, PBOOL pbState )
{
  GPIOERR     eError = GPIO_ERR_NONE;
  PGPIOPINDEF ptDef;
  GPIO_Type*  ptGpio;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the definition
    ptDef = ( PGPIOPINDEF )&atGpioPinDefs[ eGpioSel ];
    
    // get the pointer to the GPIO Base
    ptGpio = GetGpioBase( ptDef->ePort );

    // get the value
    *( pbState ) = ( BITS( ptGpio->PDIR, ptDef->nPin ) & 0x01 );
    if ( ptDef->bInvert )
    {
      // invert bit
      *( pbState ) ^= 1;
    }
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }

  // return the error
  return( eError );
}

GPIOERR Gpio_Toggle( GPIOPINENUM eGpioSel )
{
  GPIOERR     eError = GPIO_ERR_NONE;
  PGPIOPINDEF ptDef;
  GPIO_Type*  ptGpio;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the definition
    ptDef = ( PGPIOPINDEF )&atGpioPinDefs[ eGpioSel ];
    
    // get the pointer to the GPIO Base
    ptGpio = GetGpioBase( ptDef->ePort );

    // toggle the port
    ptGpio->PTOR = GPIO_PTOR_PTTO( ptDef->nPin );
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }

  // return the error
  return( eError );
}
