==> wbasser/SoftwareLibraries/HAL/Atmel/SAMD5X/GPIO/Core/Trunk/Gpio.c <==
#include "GPIO/Gpio.h"
#define EIC_EXTINT_MAX                ( 16 )

void Gpio_Initialize( void )
{
  PGPIOPINDEF       ptDef;
  PGPIOFNCDEF       ptFnc;
  PGPIOIRQDEF       ptIrq;
  U8                nIdx, nRegOfs, nPinOfs;
  BOOL              bTemp;
  PortGroup*        ptPort;
  PORT_PINCFG_Type  tPinCfg;
  PORT_PMUX_Type    tPinMux;
  EIC_CONFIG_Type   tEicCfg;
  U32               uMask;
  
  // clear the IRQ maps
  for ( nIdx = 0; nIdx < EIC_EXTINT_NUM; nIdx++ )
  {
    atIrqMaps[ nIdx ].eIrqEnum = 0xFF;
  }
  
  // for each pin def in the list
  for( nIdx = 0; nIdx < GPIO_PIN_ENUM_MAX; nIdx++ )
  {
    // get a pointer to the definition structure
    ptDef = ( PGPIOPINDEF )&g_atGpioPinDefs[ nIdx ];
    
    // get the port/pin mask
    ptPort = &PORT->Group[ ptDef->ePort ];
    uMask = BIT( ptDef->nPin );
    
    // set the config
    tPinCfg.reg = 0;
    tPinCfg.bit.PMUXEN = FALSE;
    bTemp = (( ptDef->eMode == GPIO_MODE_INPDSB_PULLDN ) || ( ptDef->eMode == GPIO_MODE_INPDSB_PULLUP ) || ( ptDef->eMode == GPIO_MODE_OUTPUT_INPDSB )) ? FALSE : TRUE;
    tPinCfg.bit.INEN = bTemp;
    bTemp = (( ptDef->eMode == GPIO_MODE_INPUT_PULLDN ) || ( ptDef->eMode == GPIO_MODE_INPUT_PULLUP )) ? TRUE : FALSE;
    tPinCfg.bit.PULLEN = bTemp;
    tPinCfg.bit.DRVSTR = ptDef->bHiDriveEnb;
    ptPort->PINCFG[ ptDef->nPin ] = tPinCfg;
    
    // set the direction
    switch( ptDef->eMode )
    {
      case GPIO_MODE_INPDSB_PULLDN :
      case GPIO_MODE_INPDSB_PULLUP :
      case GPIO_MODE_INPUT :
      case GPIO_MODE_INPUT_PULLDN :
      case GPIO_MODE_INPUT_PULLUP :
        // clear the direction bit
        ptPort->DIRCLR.reg = uMask;
        ptPort->OUTSET.reg = ( ptDef->eMode == GPIO_MODE_INPUT_PULLDN ) ? uMask : 0;
        break;
        
      case GPIO_MODE_OUTPUT_INPDSB :
      case GPIO_MODE_OUTPUT_INPENB :
        // set the direction bit
        ptPort->DIRSET.reg = uMask;
        break;
        
      default :
        break;
    }
    
    // now check for initial on
    if ( ptDef->bInitialState ^ ptDef->bInvert )
    {
      // set it  on
      ptPort->OUTSET.reg = uMask;
    }
    else
    {
      // clear it
      ptPort->OUTCLR.reg = uMask;
    }
  }

  // set up the function pins
  for ( nIdx = 0; nIdx < GPIO_FNC_ENUM_MAX; nIdx++ )
  {
    // get a pointer to the definition structure
    ptFnc = ( PGPIOFNCDEF )&g_atGpioFncDefs[ nIdx ];
    
    // get the port/mask
    ptPort = &PORT->Group[ ptFnc->ePort ];
    uMask = BIT( ptFnc->nPin );
    
    // set the cmux enable
    tPinCfg.reg = PORT_PINCFG_PMUXEN;
    tPinCfg.reg |= ( ptFnc->bAllowInput ) ? PORT_PINCFG_INEN : 0;
    tPinCfg.reg |= ( ptFnc->bPullUpEnable ) ? PORT_PINCFG_PULLEN : 0;
    ptPort->PINCFG[ ptFnc->nPin ] = tPinCfg;
    
    // get the current value
    tPinMux = ptPort->PMUX[ ptFnc->nPin >> 1 ];
    
    // now determine which nibble we are processing
    if ( ptFnc->nPin & 0x01 )
    {
      // set the mux
      tPinMux.bit.PMUXO = ptFnc->eFunc;
    }
    else
    {
      // set the mux
      tPinMux.bit.PMUXE = ptFnc->eFunc;
    }
    
    // write it back out
    ptPort->PMUX[ ptFnc->nPin >> 1] = tPinMux;
  }
  
  if ( GPIO_IRQ_ENUM_MAX != 0 )
  {
    // enable the controller
    EIC->CTRLA.reg = EIC_CTRLA_ENABLE;
    while( EIC->SYNCBUSY.bit.ENABLE == TRUE );

    // for each interrupt
    for ( nIdx = 0; nIdx < GPIO_IRQ_ENUM_MAX; nIdx++ )
    {
      // get a pointer to the definition structure
      ptIrq = ( PGPIOIRQDEF )&g_atGpioIrqDefs[ nIdx ];
    
      // get the port
      ptPort = &PORT->Group[ ptIrq->ePort ];
    
      // set the cmux enable
      tPinCfg.reg = 0;
      tPinCfg.bit.PMUXEN = TRUE;
      tPinCfg.bit.INEN = TRUE;
      ptPort->PINCFG[ ptIrq->nPin ] = tPinCfg;
    
      // get the current value
      tPinMux = ptPort->PMUX[ ptIrq->nPin >> 1 ];
    
      // now determine which nibble we are processing
      if ( ptIrq->nPin & 0x01 )
      {
        // set the mux
        tPinMux.bit.PMUXO = 0;
      }
      else
      {
        // set the mux
        tPinMux.bit.PMUXE = 0;
      }
    
      // write it back out
      ptPort->PMUX[ ptIrq->nPin >> 1] = tPinMux;
    
      // test for the odd Port A
      if (( ptIrq->ePort == GPIO_PORT_A ) && ( ptIrq->nPin >= 24 ))
      {
        // adjust for pins 24-31
        if (( ptIrq->nPin >= 24 ) && ( ptIrq->nPin <=27 ))
        {
        // set the pin offset
          nPinOfs = (( ptIrq->nPin + 4 ) % 8 );
        }
        else
        {
        // set the pin offset
          nPinOfs = (( ptIrq->nPin - 4 ) % 8 );
        }
      }
      else
      {
        // set the pin offset
        nPinOfs = ptIrq->nPin % 8;
      }

      // get the register offset
      nRegOfs = ( ptIrq->nPin & 0x0F ) / 8;
      nPinOfs = ptIrq->nPin % 8;
     
      // get the new value
      tEicCfg = EIC->CONFIG[ nRegOfs ];
    
      // set the sense and filter
      tEicCfg.reg |= ( BITS( ptIrq->eSense, ( EIC_CONFIG_SENSE1_Pos * nPinOfs )));
      tEicCfg.reg |= ( BITS( ptIrq->bFilterEnb, ( EIC_CONFIG_FILTEN0_Pos + ( nPinOfs * EIC_CONFIG_SENSE1_Pos ))));
    
      // write it back
      EIC->CONFIG[ nRegOfs ] = tEicCfg;
    
      // now set the async
      nPinOfs = ptIrq->nPin % EIC_EXTINT_NUM;
      EIC->ASYNCH.reg |= ( ptIrq->bAsyncEnb ) ? BIT( nPinOfs ) : 0;
    
      // now set the enable
      EIC->EVCTRL.reg |= ( ptIrq->bEventType ) ? BIT( nPinOfs ) : 0;
    
      // enable the interrupts
      EIC->INTENSET.reg |= ( ptIrq->bInitOn ) ? BIT( nPinOfs ) : 0;

      // set the map
      atIrqMaps[ nPinOfs ].eIrqEnum = nIdx;

      // enable the IRQ
      NVIC_EnableIRQ( EIC_0_IRQn + nPinOfs );
    }
  }
}

GPIOERR Gpio_Set( GPIOPINENUM eGpioSel, BOOL bState )
{
  GPIOERR     eError = GPIO_ERR_NONE;
  PGPIOPINDEF ptDef;
  U32         uMask;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the definition
    ptDef = ( PGPIOPINDEF )&g_atGpioPinDefs[ eGpioSel ];

    // check for an output pin
    if (( ptDef->eMode != GPIO_MODE_OUTPUT_INPDSB ) || ( ptDef->eMode != GPIO_MODE_OUTPUT_INPENB ))
    {
      // compute the mask
      uMask = BIT( ptDef->nPin );
    
      // set the appropriate state
      if ( bState ^ ptDef->bInvert )
      {
        PORT->Group[ ptDef->ePort ].OUTSET.reg = uMask;
      }
      else
      {
        PORT->Group[ ptDef->ePort ].OUTCLR.reg = uMask;
      }
    }
    else
    {
      // set the error
      eError = GPIO_ERR_ILLDIR;
    }    
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }
  
  // return the error
  return( eError );
}

GPIOERR Gpio_Get( GPIOPINENUM eGpioSel, PBOOL pbState )
{
  GPIOERR     eError = GPIO_ERR_NONE;
  PGPIOPINDEF ptDef;
  U32         uMask, uPort;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the definition
    ptDef = ( PGPIOPINDEF )&g_atGpioPinDefs[ eGpioSel ];
    
    // compute the mask
    uMask = BIT( ptDef->nPin );
    
    // get the value
    uPort = PORT->Group[ ptDef->ePort ].IN.reg;
    uPort &= uMask;
    if ( ptDef->bInvert )
    {
      // invert bit
      uPort ^= uMask;
    }
    *pbState = ( uPort ) ? TRUE : FALSE;
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }

  // return the error
  return( eError );
}

GPIOERR Gpio_Toggle( GPIOPINENUM eGpioSel )
{
  GPIOERR     eError = GPIO_ERR_NONE;
  PGPIOPINDEF ptDef;
  U32         uMask;
  
  // test for valid GPIO select
  if ( eGpioSel < GPIO_PIN_ENUM_MAX )
  {
    // get a pointer to the definition
    ptDef = ( PGPIOPINDEF )&g_atGpioPinDefs[ eGpioSel ];
    
    // compute the mask
    uMask = BIT( ptDef->nPin );
    
    // toggle the port
    PORT->Group[ ptDef->ePort ].OUTTGL.reg = uMask;
  }
  else
  {
    // set the error
    eError = GPIO_ERR_ILLGPIO;
  }

  // return the error
  return( eError );
}
